appId: com.futad.photobooth
---
- launchApp
- tapOn:
    point: "95%,5%"
- tapOn:
    point: "95%,5%"
- tapOn:
    point: "95%,5%"
- tapOn:
    point: "95%,5%"
- tapOn:
    point: "95%,5%"
- assertVisible:
    text: "PIN"
    optional: true
- tapOn:
    text: "Exit Admin"
    optional: true
